# aethel

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  analysis.md  task.md
.github/workflows/: ci.yml
crates/a4-cli/tests/: sync_test.rs
crates/aethel-cli/src/: main.rs
crates/aethel-cli/tests/: init_integration_tests.rs
docs/: plugin.md  prd.md  sdd.md  usage.md
src/: cli.rs  config.rs  error.rs  index.rs  main.rs  models.rs  registry.rs  store.rs  utils.rs
src/commands/: doctor.rs  get.rs  grow.rs  init.rs  mod.rs  new.rs  write.rs
tests/cases/010_init_default/: expect.stdout.md
tests/cases/011_init_relative_path/: cli-args.txt  expect.stdout.md
todos/: project-description.md  todo.md
todos/done/: 2025-07-19-21-15-41-add-body-argument-to-new-command-analysis.md  2025-07-19-21-15-41-add-body-argument-to-new-command.md  2025-07-19-21-17-08-update-artifact-storage-path-format.md  2025-07-19-21-57-06-combine-new-grow-into-write.md
